--- a/support.gradle
+++ b/support.gradle
@@ -27,7 +27,7 @@ versions.android_gradle_plugin = "3.4.0-alpha03"
 versions.androidx_appcompat = "1.0.2"
 versions.androidx_constraint = "1.1.3"
 versions.crashlytics = "2.9.6@aar"
-versions.dagger = "2.15"
+versions.dagger = "2.16"
 versions.dokka = "0.9.17"
 versions.fabric = "1.+"
 versions.junit = "4.12"
@@ -35,6 +35,7 @@ versions.kotlin = "1.3.10"
 versions.lifecycle = "2.0.0-rc01"
 versions.navigation = "1.0.0-alpha07"
 versions.navigation_testing = "1.0.0-alpha06"
+versions.retrofit = "2.4.0"
 versions.test_espresso_core = "3.0.2"
 versions.test_runner = "1.0.2"
 ext.versions = versions
