--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui-ktx:${rootProject.versions.navigation}"
     implementation "androidx.appcompat:appcompat:${rootProject.versions.androidx_appcompat}"
     implementation "androidx.constraintlayout:constraintlayout:${rootProject.versions.androidx_constraint}"
+    implementation "com.android.support:multidex:${rootProject.versions.multidex}"
     implementation ("com.crashlytics.sdk.android:crashlytics:${rootProject.versions.crashlytics}") {
         transitive = true
     }
