--- a/support.gradle
+++ b/support.gradle
@@ -33,6 +33,7 @@ versions.fabric = "1.+"
 versions.junit = "4.12"
 versions.kotlin = "1.3.10"
 versions.lifecycle = "2.0.0-rc01"
+versions.multidex = "1.0.3"
 versions.navigation = "1.0.0-alpha07"
 versions.navigation_testing = "1.0.0-alpha06"
 versions.retrofit = "2.4.0"
