--- a/support.gradle
+++ b/support.gradle
@@ -26,6 +26,7 @@ def versions = [:]
 versions.android_gradle_plugin = "3.4.0-alpha03"
 versions.androidx_appcompat = "1.0.2"
 versions.androidx_constraint = "1.1.3"
+versions.androidx_legacy = "1.0.0"
 versions.crashlytics = "2.9.6@aar"
 versions.dagger = "2.16"
 versions.dokka = "0.9.17"
