--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ android {
     applicationVariants.all { variant ->
         makePreferenceKeys(
                 variant,
-                "BOOK_ID"
+                "CURRENT_BOOK_ID"
         )
     }
 }
