--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ apply plugin: "kotlin-android-extensions"
 apply plugin: "kotlin-kapt"
 apply plugin: 'org.jetbrains.dokka-android'
 
+import com.android.utils.Pair
 import com.android.build.gradle.api.BaseVariant
 
 android {
@@ -56,9 +57,22 @@ android {
     }
 
     applicationVariants.all { variant ->
+        variant.buildConfigField("boolean", "SET_DEFAULT_BOOK_ID", "true")
+
+        makeIntConstantValues(
+                variant,
+                Pair.of("DEFAULT_BOOK_ID", 1)
+        )
+
         makePreferenceKeys(
                 variant,
                 "CURRENT_BOOK_ID"
+        )
+
+        makeIntentEntities(
+                variant,
+                IntentEntityType.ACTION,
+                "SELECT_BOOK"
         )
     }
 }
@@ -72,6 +86,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui-ktx:${rootProject.versions.navigation}"
     implementation "androidx.appcompat:appcompat:${rootProject.versions.androidx_appcompat}"
     implementation "androidx.constraintlayout:constraintlayout:${rootProject.versions.androidx_constraint}"
+    implementation "androidx.media2:media2:${versions.androidx_media2}"
     implementation "androidx.preference:preference:${rootProject.versions.androidx_legacy}"
     implementation "com.android.support:multidex:${rootProject.versions.multidex}"
     implementation ("com.crashlytics.sdk.android:crashlytics:${rootProject.versions.crashlytics}") {
@@ -98,14 +113,53 @@ dependencies {
 
 // region Methods
 
+static def makeIntConstantValues(BaseVariant variant, Pair<String, Integer>... pairs) {
+    pairs.each { pair ->
+        def buildConfigValue = "${pair.second}"
+        variant.buildConfigField("int", pair.first, buildConfigValue)
+
+        def resourceName = pair.first.toLowerCase(Locale.US)
+        variant.resValue("integer", resourceName, pair.second.toString())
+    }
+}
+
+static def makeStringConstantValues(BaseVariant variant, Pair<String, String>... pairs) {
+    pairs.each { pair ->
+        def buildConfigValue = "\"${pair.second}\""
+        variant.buildConfigField("String", pair.first, buildConfigValue)
+
+        def resourceName = pair.first.toLowerCase(Locale.US)
+        variant.resValue("string", resourceName, pair.second)
+    }
+}
+
 static def makePreferenceKeys(BaseVariant variant, String... keys) {
     keys.each { key ->
-        def full_key = "PREF_KEY_$key"
-        def buildConfigValue = "\"${variant.applicationId}.$full_key\""
-        variant.buildConfigField("String", full_key, buildConfigValue)
+        def fullKey = "PREF_KEY_$key"
+        def buildConfigValue = "\"${variant.applicationId}.$fullKey\""
+        variant.buildConfigField("String", fullKey, buildConfigValue)
 
-        def resourceName = full_key.toLowerCase(Locale.US)
-        def resourceValue = "${variant.applicationId}.$full_key"
+        def resourceName = fullKey.toLowerCase(Locale.US)
+        def resourceValue = "${variant.applicationId}.$fullKey"
+        variant.resValue("string", resourceName, resourceValue)
+    }
+}
+
+def enum IntentEntityType {
+    ACTION,
+    CATEGORY,
+    EXTRA
+}
+
+static def makeIntentEntities(BaseVariant variant, IntentEntityType type, String... names) {
+    names.each { name ->
+        def lowerType = type.toString().toLowerCase(Locale.US)
+        def buildConfigName = "${type.toString()}_$name"
+        def buildConfigValue = "\"${variant.applicationId}.intent.$lowerType.$name\""
+        variant.buildConfigField("String", buildConfigName, buildConfigValue)
+
+        def resourceName = "intent_${lowerType}_${name.toLowerCase(Locale.US)}"
+        def resourceValue = "${variant.applicationId}.intent.$lowerType.$name"
         variant.resValue("string", resourceName, resourceValue)
     }
 }
