--- a/support.gradle
+++ b/support.gradle
@@ -27,7 +27,6 @@ versions.android_gradle_plugin = "3.4.0-alpha03"
 versions.androidx_appcompat = "1.0.2"
 versions.androidx_constraint = "1.1.3"
 versions.androidx_legacy = "1.0.0"
-versions.androidx_media2 = "1.0.0-alpha03"
 versions.crashlytics = "2.9.6@aar"
 versions.dagger = "2.16"
 versions.dokka = "0.9.17"
@@ -35,10 +34,11 @@ versions.fabric = "1.+"
 versions.junit = "4.12"
 versions.kotlin = "1.3.10"
 versions.lifecycle = "2.0.0-rc01"
-versions.multidex = "1.0.3"
+versions.multidex = "2.0.0"
 versions.navigation = "1.0.0-alpha07"
 versions.navigation_testing = "1.0.0-alpha06"
 versions.retrofit = "2.4.0"
+versions.room = "1.1.1"
 versions.test_espresso_core = "3.0.2"
 versions.test_runner = "1.0.2"
 ext.versions = versions
