Added Room entities and classes; moved initial Api logic to a Repository

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,12 @@ android {
         versionName "0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
     }
 
     buildTypes {
