--- a/support.gradle
+++ b/support.gradle
@@ -34,6 +34,7 @@ versions.fabric = "1.+"
 versions.junit = "4.12"
 versions.kotlin = "1.3.10"
 versions.lifecycle = "2.0.0-rc01"
+versions.material = "1.1.0-alpha01"
 versions.multidex = "2.0.0"
 versions.navigation = "1.0.0-alpha07"
 versions.navigation_testing = "1.0.0-alpha06"
