Fully-functioning select book screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ android {
                 "API_VERSION",
                 "APP_VERSION",
                 "BOOK_ID",
+                "BOOK_TITLE",
                 "DESCRIPTION"
         )
     }
