Big changes all around. Created new BookLoader class, created a BookWebservice with local implementation that mimicks Retrofit call, etc.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ android {
 
         makePreferenceKeys(
                 variant,
-                "VALIDATED_BETA_KEY",
+                "VERIFIED_BETA_KEY",
                 "CURRENT_BOOK_ID"
         )
 
