--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ android {
 
         makeKeys(
                 variant,
+                "BETA_KEY_MESSAGE",
                 "BOOK_ID",
                 "BOOK_TITLE",
                 "DESCRIPTION"
