Added some navigation handling in BetaKeyFragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,10 +81,10 @@ android {
 
         makeKeys(
                 variant,
-                "BETA_KEY_MESSAGE",
                 "BOOK_ID",
                 "BOOK_TITLE",
-                "DESCRIPTION"
+                "DESCRIPTION",
+                "RESULT_MESSAGE"
         )
     }
 }
