--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:${rootProject.versions.retrofit}"
     implementation "com.squareup.retrofit2:converter-moshi:${rootProject.versions.retrofit}"
 
+    implementation group: "xmlwise", name: "xmlwise", version: rootProject.versions.xmlwise
+
     implementation project(':doofenschmirtz')
     implementation project(':punkubator')
 
