--- a/support.gradle
+++ b/support.gradle
@@ -35,11 +35,12 @@ versions.junit = "4.12"
 versions.kotlin = "1.3.10"
 versions.lifecycle = "2.0.0-rc01"
 versions.material = "1.1.0-alpha01"
-versions.multidex = "2.0.0"
-versions.navigation = "1.0.0-alpha08"
+versions.multidex = "2.0.1"
+versions.navigation = "1.0.0-alpha09"
 versions.navigation_testing = "1.0.0-alpha06"
 versions.retrofit = "2.4.0"
 versions.room = "1.1.1"
 versions.test_espresso_core = "3.0.2"
 versions.test_runner = "1.0.2"
+versions.xmlwise = "1.2.11"
 ext.versions = versions
